--- a/.iron/config.json
+++ b/.iron/config.json
@@ -2,12 +2,12 @@
   "engines": {
     "html": "html",
     "js": "js",
-    "css": "css"
+    "css": "less"
   },
 
   "template": {
     "html": true,
     "js": true,
-    "css": true
+    "css": false
   }
 }
